Fix docs on small devices

--- a/src/assets/css/modules/_docs.scss
+++ b/src/assets/css/modules/_docs.scss
@@ -2,6 +2,11 @@
     aside.docs-menu {
         padding: 2rem 1rem;
         width: 12rem;
+        flex-wrap: nowrap;
+
+        @include media-query($on-small) {
+            flex-wrap: wrap;
+        }
 
         ul {
             padding: 0;
